# fum

./: .fpm  CONTRIBUTING.md  Cargo.toml  README.md  flake.nix  index.html  rustfmt.toml
.github/workflows/: bump-nix.yml  release.yml
_app/: version.json
_app/immutable/assets/: 0.SR1hSA0i.css  _layout.DX04fmCf.css
_app/immutable/chunks/: BRmKbYT_.js  BYXO7RB5.js  CGQy_Gbb.js  CuJUsSKJ.js  CwgHPtnS.js  D0KubzN6.js  DBoNFlRm.js  DFNjw4_i.js  DQaVppx1.js  LWKitYLE.js  XeNX5MbG.js
_app/immutable/entry/: app.BTUa2s0b.js  app.D6-krL6C.js  start.CHwnXDux.js  start.CV-pMHoG.js
_app/immutable/nodes/: 0.4Sr3Q9vP.js  1.BmrpFHMz.js  1.GERinikq.js  2.D9CsRvLJ.js  3.4UQYkd6u.js
doc-site/: README.md  package-lock.json  package.json  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
doc-site/src/: app.css  app.html  global.d.ts  vite-env.d.ts
docs/: compability.html  configuring.html  faq.html  getting_started.html  rices.html
nix/: default.nix  hm-module.nix
src/: action.rs  cli.rs  config.rs  cover.rs  event.rs  fum.rs  main.rs  meta.rs  player.rs  regexes.rs  script.rs  state.rs  status.rs  term_config.rs  terminal.rs  text.rs  track.rs  ui.rs  utils.rs  widget.rs
src/config/: config.rs  defaults.rs  keybind.rs  mod.rs
src/mode/: mod.rs  mode.rs  mpris.rs  mpris_mode.rs  player.rs
src/mpris/: identity.rs  metadata.rs  mod.rs  mpris.rs  mpris_player.rs  player.rs  proxies.rs  status.rs
src/script/: config.rs  engine.rs  functions.rs  location.rs  mod.rs  scope.rs  watcher.rs
src/terminal/: err_ui.rs  mod.rs  ui.rs
src/utils/: align.rs  duration.rs  etc.rs  interaction.rs  mod.rs  player.rs  terminal.rs  text.rs  widget.rs
src/widget/: button.rs  container.rs  cover_art.rs  empty.rs  label.rs  mod.rs  progress.rs  volume.rs  widget.rs
(+27 files in other folders)
