[package]
name = "fum-player"
description = "A tui-based mpris music client."
version = "1.3.0"
repository = "https://github.com/qxb3/fum"
homepage = "https://github.com/qxb3/fum"
license = "MIT"
edition = "2021"

[[bin]]
name = "fum"
path = "./src/main.rs"

[dependencies]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
