[package]
name = "fum-player"
description = "A tui-based mpris music client."
version = "1.3.0"
repository = "https://github.com/qxb3/fum"
homepage = "https://github.com/qxb3/fum"
license = "MIT"
edition = "2021"

[dependencies]
base64 = "0.22.1"
clap = { version = "4.5.32", features = ["derive"] }
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3.31"
image = "0.25.5"
ratatui = "0.29.0"
ratatui-image = { version = "5.0.0", features = ["crossterm"] }
reqwest = "0.12.14"
rhai = "1.21.0"
tokio = { version = "1.43.0", features = ["full"] }
zbus = { version = "5.5.0", default-features = false, features = ["tokio"] }

[[bin]]
name = "fum"
path = "./src/main.rs"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
